School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/parser/decl_at_end.deca
//declaration d'une variable en fin du fichier après des opérations
//erreur attendue : no viable alternative at input 'b'

{
    int a = 10;
    println("variable a = ", a);
    int b = a + 1;
    println("variable b = ", b);
}